templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lucky-draw-client
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: louistsaicsie/stylish-lucky-draw-client
          ports:
            - containerPort: 3000
  selector:
    matchLabels:
      app: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lucky-draw-server
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image:  louistsaicsie/stylish-lucky-draw-server
          ports:
            - containerPort: 5000
  selector:
    matchLabels:
      app: server
